--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "git://github.com/dominictarr/pull-more.git"
   },
   "dependencies": {
+    "libnested": "^1.3.1",
     "pull-next": "^1.0.1",
     "pull-stream": "^3.6.1"
   },
